data/derived/fa15/progs/unify/prog2382.ml.out
Characters 183-187:
  if (List.mem h r = false) then seen' := h :: seen in
                                               ^^^^
Error: This expression has type 'a list ref
       but an expression was expected of type 'a list
